src/snapshots/hephaestus_jit__test__conditionals.snap
---
source: src/test.rs
expression: graph
---
Graph {
    passes: [
        Pass {
            resources: [
                ResourceId(
                    0,
                ),
            ],
            size_buffer: None,
            op: Kernel {
                ir: IR {
                    vars: [
                        Var {
                            ty: Bool,
                            op: Literal,
                            deps: (
                                0,
                                0,
                            ),
                            data: 1,
                        },
                        Var {
                            ty: Bool,
                            op: BufferRef,
                            deps: (
                                0,
                                0,
                            ),
                            data: 0,
                        },
                        Var {
                            ty: U32,
                            op: Index,
                            deps: (
                                0,
                                0,
                            ),
                            data: 0,
                        },
                        Var {
                            ty: Void,
                            op: Scatter,
                            deps: (
                                0,
                                3,
                            ),
                            data: 0,
                        },
                    ],
                    deps: [
                        VarId(
                            1,
                        ),
                        VarId(
                            0,
                        ),
                        VarId(
                            2,
                        ),
                    ],
                    n_buffers: 1,
                    n_textures: 0,
                    n_accels: 0,
                    hash: Mutex {
                        data: None,
                        poisoned: false,
                        ..
                    },
                },
                size: 100,
            },
        },
    ],
    resource_descs: [
        BufferDesc(
            BufferDesc {
                size: 100,
                ty: Bool,
            },
        ),
    ],
    resources: [
        Internal,
    ],
    n_outputs: 0,
}
