src/snapshots/hephaestus_jit__test__scatter_chain1.snap
---
source: src/test.rs
expression: graph
---
Graph {
    device: VulkanDevice(
        VulkanDevice(
            InternalVkDevice {
                device: Device,
                pipeline_cache: Mutex {
                    data: {},
                    poisoned: false,
                    ..
                },
                shader_cache: Mutex {
                    data: ShaderCache(
                        {},
                    ),
                    poisoned: false,
                    ..
                },
            },
        ),
    ),
    passes: [
        Pass {
            buffers: [
                BufferId(
                    0,
                ),
            ],
            textures: [],
            accels: [],
            size_buffer: None,
            op: Kernel {
                ir: IR {
                    vars: [
                        Var {
                            ty: I32,
                            op: Literal,
                            deps: (
                                0,
                                0,
                            ),
                            data: 0,
                        },
                        Var {
                            ty: I32,
                            op: BufferRef,
                            deps: (
                                0,
                                0,
                            ),
                            data: 0,
                        },
                        Var {
                            ty: U32,
                            op: Index,
                            deps: (
                                0,
                                0,
                            ),
                            data: 0,
                        },
                        Var {
                            ty: Void,
                            op: Scatter(
                                None,
                            ),
                            deps: (
                                0,
                                3,
                            ),
                            data: 0,
                        },
                    ],
                    deps: [
                        VarId(
                            1,
                        ),
                        VarId(
                            0,
                        ),
                        VarId(
                            2,
                        ),
                    ],
                    n_buffers: 1,
                    n_textures: 0,
                    n_accels: 0,
                    hash: Mutex {
                        data: None,
                        poisoned: false,
                        ..
                    },
                },
                size: 10,
            },
        },
        Pass {
            buffers: [
                BufferId(
                    0,
                ),
            ],
            textures: [],
            accels: [],
            size_buffer: None,
            op: Kernel {
                ir: IR {
                    vars: [
                        Var {
                            ty: I32,
                            op: BufferRef,
                            deps: (
                                0,
                                0,
                            ),
                            data: 0,
                        },
                        Var {
                            ty: I32,
                            op: Literal,
                            deps: (
                                0,
                                0,
                            ),
                            data: 2,
                        },
                        Var {
                            ty: U32,
                            op: Index,
                            deps: (
                                0,
                                0,
                            ),
                            data: 0,
                        },
                        Var {
                            ty: Void,
                            op: Scatter(
                                None,
                            ),
                            deps: (
                                0,
                                3,
                            ),
                            data: 0,
                        },
                    ],
                    deps: [
                        VarId(
                            0,
                        ),
                        VarId(
                            1,
                        ),
                        VarId(
                            2,
                        ),
                    ],
                    n_buffers: 1,
                    n_textures: 0,
                    n_accels: 0,
                    hash: Mutex {
                        data: None,
                        poisoned: false,
                        ..
                    },
                },
                size: 10,
            },
        },
        Pass {
            buffers: [
                BufferId(
                    1,
                ),
            ],
            textures: [],
            accels: [],
            size_buffer: None,
            op: Kernel {
                ir: IR {
                    vars: [
                        Var {
                            ty: I32,
                            op: Literal,
                            deps: (
                                0,
                                0,
                            ),
                            data: 0,
                        },
                        Var {
                            ty: I32,
                            op: Literal,
                            deps: (
                                0,
                                0,
                            ),
                            data: 1,
                        },
                        Var {
                            ty: I32,
                            op: Bop(
                                Add,
                            ),
                            deps: (
                                0,
                                2,
                            ),
                            data: 0,
                        },
                        Var {
                            ty: I32,
                            op: BufferRef,
                            deps: (
                                2,
                                2,
                            ),
                            data: 0,
                        },
                        Var {
                            ty: U32,
                            op: Index,
                            deps: (
                                2,
                                2,
                            ),
                            data: 0,
                        },
                        Var {
                            ty: Void,
                            op: Scatter(
                                None,
                            ),
                            deps: (
                                2,
                                5,
                            ),
                            data: 0,
                        },
                    ],
                    deps: [
                        VarId(
                            0,
                        ),
                        VarId(
                            1,
                        ),
                        VarId(
                            3,
                        ),
                        VarId(
                            2,
                        ),
                        VarId(
                            4,
                        ),
                    ],
                    n_buffers: 1,
                    n_textures: 0,
                    n_accels: 0,
                    hash: Mutex {
                        data: None,
                        poisoned: false,
                        ..
                    },
                },
                size: 10,
            },
        },
    ],
    buffers: [
        BufferDesc {
            size: 10,
            ty: I32,
            buffer: VulkanBuffer(
                VulkanBuffer {
                    size: 40,
                },
            ),
        },
        BufferDesc {
            size: 10,
            ty: I32,
            buffer: VulkanBuffer(
                VulkanBuffer {
                    size: 40,
                },
            ),
        },
    ],
    textures: [],
    accels: [],
    schedule: [
        VarRef {
            id: VarId(
                DefaultKey(
                    1v1,
                ),
            ),
        },
        VarRef {
            id: VarId(
                DefaultKey(
                    5v1,
                ),
            ),
        },
        VarRef {
            id: VarId(
                DefaultKey(
                    7v1,
                ),
            ),
        },
    ],
}
